<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_light_gray"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_select_passenger"
        android:textColor="@color/text_sub_grey"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:background="@color/bg_card_white"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/blue_primary"
            app:tint="@color/white"
            android:scaleType="centerInside"
            android:src="@drawable/ic_nav_profile"

            app:shapeAppearanceOverlay="@style/RoundedLeftCorners"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_adult_home"
                    android:textColor="@color/text_main_dark"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_adult_age"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_minus_adult"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:importantForAccessibility="no"
                android:clickable="true"
                android:focusable="true"
                android:paddingVertical="6dp"
                android:paddingHorizontal="6dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:background="@color/blue_primary"
                android:src="@drawable/ic_minus"
                app:tint="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedCorners"/>

            <TextView
                android:id="@+id/tv_count_adult"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/text_main_dark"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_plus_adult"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:importantForAccessibility="no"
                android:paddingVertical="6dp"
                android:paddingHorizontal="6dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:background="@color/blue_primary"
                android:src="@drawable/ic_plus"
                app:tint="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedCorners"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:background="@color/bg_card_white"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/blue_primary"
            app:tint="@color/white"
            android:src="@drawable/ic_child"
            android:scaleType="centerInside"
            app:shapeAppearanceOverlay="@style/RoundedLeftCorners"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/bg_card_white"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_child_home"
                    android:textColor="@color/text_main_dark"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_child_age"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_minus_child"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:importantForAccessibility="no"
                android:paddingVertical="6dp"
                android:paddingHorizontal="6dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:background="@color/blue_primary"
                android:src="@drawable/ic_minus"
                app:tint="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedCorners"/>

            <TextView
                android:id="@+id/tv_count_child"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/text_main_dark"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_plus_child"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:importantForAccessibility="no"
                android:paddingVertical="6dp"
                android:paddingHorizontal="6dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:background="@color/blue_primary"
                android:src="@drawable/ic_plus"
                app:tint="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedCorners"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:background="@color/bg_card_white"
        >
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:background="@color/blue_primary"
            app:tint="@color/white"
            android:src="@drawable/ic_baby"
            app:shapeAppearanceOverlay="@style/RoundedLeftCorners"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@color/bg_card_white"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_infant_home"
                    android:textColor="@color/text_main_dark"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/passenger_infant_age"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_minus_baby"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:importantForAccessibility="no"
                android:paddingVertical="6dp"
                android:paddingHorizontal="6dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:background="@color/blue_primary"
                android:src="@drawable/ic_minus"
                app:tint="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedCorners"/>

            <TextView
                android:id="@+id/tv_count_baby"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/text_main_dark"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_plus_baby"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:importantForAccessibility="no"
                android:paddingVertical="6dp"
                android:paddingHorizontal="6dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:background="@color/blue_primary"
                android:src="@drawable/ic_plus"
                app:tint="@color/white"
                app:shapeAppearanceOverlay="@style/RoundedCorners"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm_passenger"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_confirm"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/blue_primary" />

</LinearLayout>